2007-08-12  Brian Warner  <warner@lothar.com>

	* contrib/darcs_buildbot.py (makeChange): handle moved files too,
	by adding the file's new name to the list of changed files. This
	ought to be sufficient for things like isFileImportant and trial
	tests that only exercise tests for files that have been modified.
	Closes #31.

	* buildbot/status/web/xmlrpc.py (XMLRPCServer): add preliminary
	XMLRPC server to the WebStatus page. This only has two methods
	right now (getAllBuildsInInterval and getBuild), but we'll be
	adding more in the future. This server is extracted from the
	trac-plugin branch.

	* buildbot/status/web/baseweb.py (OneLinePerBuild): refactor using
	generateFinishedBuilds, and improve the data displayed.
	* buildbot/status/web/build.py (StatusResourceBuild): rearrange
	the per-Build page, add some information like ETA and got_revision
	* buildbot/status/web/builder.py (StatusResourceBuilder): same,
	adding a list of recently completed builds
	* buildbot/status/web/base.py (css_classes): factor this out

	* buildbot/interfaces.py (IStatus.generateFinishedBuilds): define
	new method, to make status display classes easier to write,
	especially the WebStatus 'one_line_per_build' page.
	(IBuilderStatus.generateFinishedBuilds): same
	* buildbot/status/builder.py (BuilderStatus.generateFinishedBuilds):
	(Status.generateFinishedBuilds): implement it

	* buildbot/process/factory.py (GNUAutoconf.__init__): allow
	'source' to be a BuildStep instance, since BuildFactory accepts
	them now.
	(CPAN.__init__): same
	(Distutils.__init__): same
	(Trial.__init__): same

	* buildbot/interfaces.py (IBuildStatus.getProperty): note that
	this might raise KeyError

2007-08-07  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (P4): use 'p4user' to construct the
	'Owner:' field of the view, rather than 'p4logname', since
	p4logname comes from the buildslave's environment and seems
	unlikely to ever do the right thing. Thanks to Wade Brainerd for