@@ -1,5 +1,10 @@
 2007-08-12  Brian Warner  <warner@lothar.com>
 
+	* buildbot/status/web/baseweb.py (OneLineMixin.make_line): tighten
+	up the format a bit
+	(OneLinePerBuild.body): use a <ul> instead of <div>s
+	(OneLinePerBuildOneBuilder.body): same
+
 	* contrib/darcs_buildbot.py (makeChange): handle moved files too,
 	by adding the file's new name to the list of changed files. This
 	ought to be sufficient for things like isFileImportant and trial
